@@ -225,13 +225,12 @@ class ThemeBase:
             
         if request.cfg.show_login:
             if request.user.valid:
-                #loghtml = preferencesPage.link_to(request, text=_("Logout"))
                 userlinks.append("""\
-<form action="/" method="POST">
+<form action="" method="POST">
 <input type="hidden" name="action" value="userform">
 <input type="submit" name="logout" value="%(logout)s">
 </form>
-""" % { 'logout': _('Logout') }) # XXX add path instead of /
+""" % { 'logout': _('Logout') })
             else:
                 userlinks.append(preferencesPage.link_to(request, text=_("Login")))
 
