@@ -9,6 +9,10 @@ Version 1.5.0current:
       available as kw args of the auth method, so it is easy and obvious now.
     * Make login and logout show at the same place. Is only shown when
       show_login is True (default).
+    * Disabled login using &uid=12345.67.8910 method. Please use name/password.
+    * Made builtin moin_cookie authentication more modular: the cookie is now
+      touched by MoinMoin.auth.moin_cookie only, with one minor discomfort:
+      When creating a user, you are not automatically logged in any more.
 
 Version 1.5.0beta5:
   Fixes:
